API changes:     -Added /blockchain/addblock endpoint to openapi.yaml spec     -Implement the /blockchain/addblock endpoint so that it returns the exception on invalid block request     -add getBlockFromModel method to BlockModelHelper.java which converts a block model object to a usable block object     -Handle the new exception thrown in PeerThreadedSynchronizer.java from replaceChain method
Blockchain changes:
    -Remove logging from KeccakHashHelper to get it ready to be moved to common code (no logging there, only exceptions!)
    -added method to Block.java to verify the block against a previous block, this method throws InvalidObjectExceptions
    -Update some old logging in Blockchain.java to make it better
    -add method to Blockchain.java retrieve last block from the chain
    -Fix the addBlock method to accept a block object, validate it and add it to the chain instead of mining the next one (as this will be done by the miner service in the future...)
    -Update the replace and validate chain methods of Blockchain.java to use the verify block method, and handle the new exception thrown

NOTE: ALL TESTS WILL BE BROKEN BY THIS LOL, NEEEED TO FIX EM NEXT
