# server-api-generator/src/main/resources/openapi.yaml
@@ -43,6 +43,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/Block'
 
+  /blockchain/addblock:
+    post:
+      summary: Attempt to add a new block to the blockchain
+      operationId: addBlock
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+        400:
+          description: block is not valid
+          content:
+            application/json:
+              schema:
+                type: object
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Block'
+        description: Block to be added
+        required: true
+
   /blockchain/size:
     get:
       summary: Get the blockchain length
