# server/src/main/java/com/jounaidr/jrc/server/api/implementation/helpers/BlockModelHelper.java
@@ -1,10 +1,8 @@
 package com.jounaidr.jrc.server.api.implementation.helpers;
 
-import com.jounaidr.jrc.server.api.generated.model.Block;
-
 public class BlockModelHelper {
-    public static Block getBlockAsModel(com.jounaidr.jrc.server.blockchain.Block block){
-        Block blockModel = new Block();
+    public static com.jounaidr.jrc.server.api.generated.model.Block getBlockAsModel(com.jounaidr.jrc.server.blockchain.Block block){
+        com.jounaidr.jrc.server.api.generated.model.Block blockModel = new com.jounaidr.jrc.server.api.generated.model.Block();
 
         blockModel.setHash(block.getHash());
         blockModel.setPreviousHash(block.getPreviousHash());
@@ -15,5 +13,17 @@ public class BlockModelHelper {
         blockModel.setProofOfWork(block.getProofOfWork());
 
         return blockModel;
+    }
+
+    public static com.jounaidr.jrc.server.blockchain.Block getBlockFromModel(com.jounaidr.jrc.server.api.generated.model.Block blockModel){
+        return new com.jounaidr.jrc.server.blockchain.Block(
+                blockModel.getHash(),
+                blockModel.getPreviousHash(),
+                blockModel.getData(),
+                blockModel.getTimeStamp(),
+                blockModel.getNonce(),
+                blockModel.getDifficulty(),
+                blockModel.getProofOfWork()
+        );
     }
 }
