# server/src/main/java/com/jounaidr/jrc/server/peers/peer/PeerThreadedPoller.java
@@ -33,7 +33,7 @@ public class PeerThreadedPoller implements Runnable{
 
     @Override
     public void run() {
-
+        //TODO: implement addblock endpoint first.
 
     }
 
